--- a/res/layout/configuration_db.xml
+++ b/res/layout/configuration_db.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:ems="10"
-        android:hint="@string/hint_username"
+        android:hint="@string/hint_username_db"
         android:imeOptions="actionNext"
         android:inputType="text" >
 
